@@ -1,5 +1,6 @@
 PostGIS 1.0.5CVS
 	- New "Reporting Bugs" chapter in manual
+	- Segfault fix in shp2pgsql (utf8 encoding)
 
 PostGIS 1.0.4
 2005/09/09
